--- a/index.html
+++ b/index.html
@@ -3,12 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>Rock, Paper, Scissors</title>
-    <script type="text/javascript" src="rock_paper_scissors.js">
-    </script>
+
   </head>
 
   <body>
+    <div class="heading">
+      <h1>Rock, Paper, Scissors</h1>
+    </div>
+
+    <div class="buttons">
+      <button type="button" name="rock">Rock</button>
+      <button type="button" name="paper">Paper</button>
+      <button type="button" name="scissors">Scissors</button>
+    </div>
+
+    <div class="results">
+      <p> <strong>Player Score: </strong>  <em id="player-score">0</em> </p>
+      <p> <strong>Computer Score: </strong>  <em id="computer-score">0</em> </p>
+    </div>
+
+    <div class="win-class">
+      <h1 id="winner">You Win!</h1>
+    </div>
+
+    <div class="reset-class">
+      <form>
+        <input id="reset" TYPE="button" onClick="history.go(0)" VALUE="Reset">
+      </form>
+    </div>
 
   </body>
+  <script type="text/javascript" src="rock_paper_scissors.js"></script>
 
 </html>
